<?xml version="1.0" encoding="utf-8"?>
<resources>

  <!-- Instead of 3 dots "..." after some messages please use &#8230; -->

  <string name="app_name">BF4 Droid</string>
  <string name="action_settings">Settings</string>
  <string name="hello_world">Hello world!</string>
  <string name="title_activity_single_fragment">@string/app_name</string>
  <string name="title_activity_soldier_statistics">Statistics</string>
  <string name="update_status_header">Update your status</string>
  <string name="update_status_hint">Update message here…</string>
  <string name="update_attachment_header">Attach item to post</string>
  <string name="update_attachment_hint">http://</string>
  <string name="create_post_header">Post content</string>
  <string name="create_post_hint">Post message here…</string>
  <string name="new_thread_header">Thread title</string>
  <string name="new_thread_title_hint">When is BF5 coming out?</string>
  <string name="new_thread_content_header">Content</string>
  <string name="new_thread_content_hint">I think BF5 should come out tomorrow.</string>
  <string name="ab_action_new">New entry</string>
  <string name="ab_action_send">Send</string>
  <string name="msg_empty_feed">The Battle Feed is empty.</string>
  <string name="msg_empty_comments">No comments found.</string>
  <string name="msg_empty_news">No news found.</string>
  <string name="msg_forums_not_found">Forums not found.</string>
  <string name="msg_no_notifications">No notifications found.</string>
  <string name="msg_no_menu_items">No menu items found</string>
  <string name="msg_sending">Sending…</string>
  <string name="msg_enter_comment">Enter a comment!</string>
  <string name="msg_comment_ok">Comment posted!</string>
  <string name="cdesc_gravatar">Gravatar</string>
  <string name="cdesc_soldier_avatar">Soldier avatar</string>
  <string name="cdesc_platoon_badge">Platoon badge</string>
  <string name="cdesc_platform_icon">Platform icon</string>
  <string name="cdesc_rank_image">Rank image</string>
  <string name="cdesc_status_link_image">Extra content image</string>
  <string name="soldier_left_until_rankup" formatted="true">%s until rank up</string>
  <string name="activated_new_game">Activated new game/expansion:</string>
  <string name="logged_in_as">Logged in as</string>
  <string name="assignment_goals_completed" formatted="false">%s/%s goals completed</string>

  <!-- HEADINGS -->
  <string name="weapons">Weapons</string>
  <string name="vehicles">Vehicles</string>
  <string name="reports">Reports</string>
  <string name="assignments">Assignments</string>
  <string name="service_stars">Service Stars</string>
  <string name="comments">Comments</string>
  <string name="soldier_quick_stats">Quick Statistics</string>
  <string name="soldier_detailed_stats">In-depth Statistics</string>
  <string name="profile_information_header">Basic Information</string>
  <string name="profile_presentation_header">Presentation</string>
  <string name="selected_soldier">Selected soldier</string>
  <string name="navigationdrawer_my_soldier">My soldier</string>
  <string name="navigationdrawer_overview">Overview</string>
  <string name="navigationdrawer_statistics">Statistics</string>
  <string name="navigationdrawer_unlocks">Unlocks</string>
  <string name="navigationdrawer_social">Social</string>
  <string name="navigationdrawer_news">News</string>
  <string name="navigationdrawer_battle_feed">Battle Feed</string>
  <string name="navigationdrawer_notifications">Notifications</string>
  <string name="navigationdrawer_servers">Servers</string>
  <string name="navigationdrawer_forums">Forums</string>
  <string name="navigationdrawer_view_forums">View forums</string>
  <string name="navigationdrawer_saved_threads">Saved threads</string>
</resources>
